--- a/STM32F7_HighSpeed_IEPE.ioc
+++ b/STM32F7_HighSpeed_IEPE.ioc
@@ -59,19 +59,23 @@ I2C2.GeneralCallMode=I2C_GENERALCALL_ENABLE
 I2C2.IPParameters=Timing,GeneralCallMode,OwnAddress
 I2C2.OwnAddress=4
 I2C2.Timing=0x20404768
+IWDG.IPParameters=Reload,Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_32
+IWDG.Reload=3096
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
+Mcu.IP10=USART6
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=I2C2
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=USART6
-Mcu.IPNb=10
+Mcu.IP5=IWDG
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PA3
@@ -80,7 +84,8 @@ Mcu.Pin10=PC7
 Mcu.Pin11=PB6
 Mcu.Pin12=PB7
 Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin14=VP_IWDG_VS_IWDG
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -89,7 +94,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PD12
 Mcu.Pin8=PD13
 Mcu.Pin9=PC6
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -277,6 +282,8 @@ USART6.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F767ZI
