add placement p2p value

--- a/STM32F7_HighSpeed_IEPE.ioc
+++ b/STM32F7_HighSpeed_IEPE.ioc
@@ -35,9 +35,10 @@ Dma.USART6_TX.2.Priority=DMA_PRIORITY_LOW
 Dma.USART6_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.BinarySemaphores01=adcBinarySem,Dynamic,NULL;I2cBinarySem,Dynamic,NULL
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Queues01
+FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Queues01,configTOTAL_HEAP_SIZE
 FREERTOS.Queues01=adcQueue,16,long,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=ADC_Task,3,200,ADC_Thread,Default,NULL,Dynamic,NULL,NULL;FFT_Task,2,400,FFT_Thread,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=350000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.GeneralCallMode=I2C_GENERALCALL_ENABLE
@@ -65,9 +66,10 @@ Mcu.Package=LQFP144
 Mcu.Pin0=PA3
 Mcu.Pin1=PA4
 Mcu.Pin10=PC7
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_IWDG_VS_IWDG
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin11=PB6
+Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin13=VP_IWDG_VS_IWDG
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -76,7 +78,7 @@ Mcu.Pin6=PB11
 Mcu.Pin7=PD12
 Mcu.Pin8=PD13
 Mcu.Pin9=PC6
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -122,6 +124,8 @@ PB10.Signal=I2C2_SCL
 PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
@@ -267,3 +271,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F767ZI
 boardIOC=true
+isbadioc=false
